// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|Tiles/ImageTile ImageTile - 16x9 - backgroundGradient 1`] = `
<div
  style={
    Object {
      "maxWidth": "500px",
    }
  }
>
  <div
    className="tile tile--16x9"
  >
    <div
      className="background"
      style={
        Object {
          "backgroundImage": "url('')",
        }
      }
    />
    <div
      className="content"
    >
      <p>
        Content
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots components|Tiles/ImageTile ImageTile - 16x9 - with animation 1`] = `
<div
  style={
    Object {
      "maxWidth": "500px",
    }
  }
>
  <div
    className="tile tile--16x9"
  >
    <div
      className="background"
      style={
        Object {
          "backgroundImage": "url('')",
        }
      }
    />
    <div
      className="content"
    >
      <p>
        Content
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots components|Tiles/ImageTile ImageTile 4x3 1`] = `
<div
  style={
    Object {
      "maxWidth": "500px",
    }
  }
>
  <div
    className="tile tile--4x3"
  >
    <div
      className="background"
      style={
        Object {
          "backgroundImage": "url('')",
        }
      }
    />
    <div
      className="content"
    >
      <p>
        Content
      </p>
    </div>
  </div>
</div>
`;
